# Console-Renderer

./: .gitignore  CMakeLists.txt  CustomTypes.cpp  CustomTypes.h  Framework.cpp  UIFramework.cpp  UIFramework.h  main  main.cpp  project.hpp
.cache/clangd/index/: CustomTypes.cpp.29FDFD833B4E415E.idx  CustomTypes.cpp.7791D3E8277ABF22.idx  CustomTypes.h.3CCC31EB75611151.idx  CustomTypes.h.8D405F56A8807FF5.idx  UIFramework.cpp.0169D1557D506A51.idx  UIFramework.cpp.5E5CF95E5917689C.idx  UIFramework.h.154B36D1D5ABB322.idx  UIFramework.h.C6D5818715C77D1B.idx  main.cpp.0B7688D0EC3EE1FB.idx  main.cpp.15C2CA1311217F6C.idx
App/: CMakeLists.txt  main.cpp  main.h
Libraries/: CMakeLists.txt  CustomTypes.h  UIFramework.cpp  UIFramework.h
